examples/configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: test
spec:
  clusterIP: None
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
